Fixed missing Core naming

--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -522,22 +522,16 @@
                   <a href="#" class="new-footer__navigation-link">Jobs at UQ</a>
                 </li>
                 <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Staff login</a>
-                </li>
-                <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">2022 strategic plan consultation</a>
                 </li>
                 <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">System support</a>
+                  <a href="#" class="new-footer__navigation-link">IT Supoort</a>
                 </li>
               </ul>
             </li>
             <li class="new-footer__navigation-item">
               <h2 class="new-footer__navigation-title">Current students</h2>
               <ul class="new-footer__navigation-list new-footer__navigation-level-2">
-                <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Student login</a>
-                </li>
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Program and courses</a>
                 </li>
@@ -548,7 +542,7 @@
                   <a href="#" class="new-footer__navigation-link">Student support</a>
                 </li>
                 <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">System support</a>
+                  <a href="#" class="new-footer__navigation-link">IT Supoort</a>
                 </li>
               </ul>
             </li>
@@ -576,10 +570,7 @@
               <h2 class="new-footer__navigation-title">Contact</h2>
               <ul class="new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Staff contact directory</a>
-                </li>
-                <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">find an expert or researcher</a>
+                  <a href="#" class="new-footer__navigation-link">Find a researcher</a>
                 </li>
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Faculties, schools, institutes and centres</a>
@@ -622,22 +613,16 @@
                   <a href="#" class="new-footer__navigation-link">Jobs at UQ</a>
                 </li>
                 <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Staff login</a>
-                </li>
-                <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">2022 strategic plan consultation</a>
                 </li>
                 <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">System support</a>
+                  <a href="#" class="new-footer__navigation-link">IT Supoort</a>
                 </li>
               </ul>
             </li>
             <li class="uq-accordion__item new-footer__navigation-item">
               <button href="#" class="uq-accordion__toggle new-footer__navigation-toggle">Current students</button>
               <ul class="uq-accordion__content new-footer__navigation-list new-footer__navigation-level-2">
-                <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Student login</a>
-                </li>
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Program and courses</a>
                 </li>
@@ -648,7 +633,7 @@
                   <a href="#" class="new-footer__navigation-link">Student support</a>
                 </li>
                 <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">System support</a>
+                  <a href="#" class="new-footer__navigation-link">IT Supoort</a>
                 </li>
               </ul>
             </li>
@@ -659,16 +644,7 @@
                   <a href="#" class="new-footer__navigation-link">Library services</a>
                 </li>
                 <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Search catalogue</a>
-                </li>
-                <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">UQ journals</a>
-                </li>
-                <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Library hours</a>
-                </li>
-                <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Library contacts</a>
                 </li>
               </ul>
             </li>
@@ -676,10 +652,7 @@
               <button href="#" class="uq-accordion__toggle new-footer__navigation-toggle">Contact</button>
               <ul class="uq-accordion__content new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Staff contact directory</a>
-                </li>
-                <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">find an expert or researcher</a>
+                  <a href="#" class="new-footer__navigation-link">Find a researcher</a>
                 </li>
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Faculties, schools, institutes and centres</a>
