--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -493,9 +493,6 @@
                   <a href="#" class="new-footer__navigation-link">Jobs at UQ</a>
                 </li>
                 <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Staff login</a>
-                </li>
-                <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">2022 strategic plan consultation</a>
                 </li>
                 <li class="new-footer__navigation-item">
@@ -506,9 +503,6 @@
             <li class="new-footer__navigation-item">
               <h2 class="new-footer__navigation-title">Current students</h2>
               <ul class="new-footer__navigation-list new-footer__navigation-level-2">
-                <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Student login</a>
-                </li>
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Program and courses</a>
                 </li>
@@ -530,16 +524,7 @@
                   <a href="#" class="new-footer__navigation-link">Library services</a>
                 </li>
                 <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Search catalogue</a>
-                </li>
-                <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">UQ journals</a>
-                </li>
-                <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Library hours</a>
-                </li>
-                <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Library contacts</a>
                 </li>
               </ul>
             </li>
@@ -547,10 +532,7 @@
               <h2 class="new-footer__navigation-title">Contact</h2>
               <ul class="new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Staff contact directory</a>
-                </li>
-                <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">find an expert or researcher</a>
+                  <a href="#" class="new-footer__navigation-link">Find a researcher</a>
                 </li>
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Faculties, schools, institutes and centres</a>
@@ -593,9 +575,6 @@
                   <a href="#" class="new-footer__navigation-link">Jobs at UQ</a>
                 </li>
                 <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Staff login</a>
-                </li>
-                <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">2022 strategic plan consultation</a>
                 </li>
                 <li class="new-footer__navigation-item">
@@ -606,9 +585,6 @@
             <li class="uq-accordion__item new-footer__navigation-item">
               <button href="#" class="uq-accordion__toggle new-footer__navigation-toggle">Current students</button>
               <ul class="uq-accordion__content new-footer__navigation-list new-footer__navigation-level-2">
-                <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Student login</a>
-                </li>
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Program and courses</a>
                 </li>
@@ -630,16 +606,7 @@
                   <a href="#" class="new-footer__navigation-link">Library services</a>
                 </li>
                 <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Search catalogue</a>
-                </li>
-                <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">UQ journals</a>
-                </li>
-                <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Library hours</a>
-                </li>
-                <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Library contacts</a>
                 </li>
               </ul>
             </li>
@@ -647,10 +614,7 @@
               <button href="#" class="uq-accordion__toggle new-footer__navigation-toggle">Contact</button>
               <ul class="uq-accordion__content new-footer__navigation-list new-footer__navigation-level-2">
                 <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">Staff contact directory</a>
-                </li>
-                <li class="new-footer__navigation-item">
-                  <a href="#" class="new-footer__navigation-link">find an expert or researcher</a>
+                  <a href="#" class="new-footer__navigation-link">Find a researcher</a>
                 </li>
                 <li class="new-footer__navigation-item">
                   <a href="#" class="new-footer__navigation-link">Faculties, schools, institutes and centres</a>
