Added interim local nav

--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -31,111 +31,119 @@
           <!-- <div class="controls">
             <button type="button" class="btn slide-menu__control" data-action="close">Close</button>
           </div> -->
+          <div class="uq-site-header__title-container">
+            <div class="uq-site-header__title-container__left">
+              <a href="/" class="uq-site-header__title">Site title</a>
+            </div>
+          </div>
           <ul>
-            <li  class="new-header__newglobal-nav-item">
-              <a  class="new-header__newglobal-nav-link" href="#">Study</a>
+            <li  class="">
+              <a  class="" href="#">Study</a>
               <ul>
                 <li>
-                  <a href="#">Study overview</a>
+                  <a href="/study/programs">Find a program</a>
                 </li>
-                <li><a href="#">Find a course or program</a></li>
-                <li><a href="#">Browse study areas</a></li>
-                <li><a href="#">Why choose UQ</a></li>
-                <li><a href="#">Enriching student experience</a></li>
-                <li><a href="#">Study options & course types</a></li>
-                <li><a href="#">Scholarships</a></li>
-                <li><a href="#">Life at UQ & accommodation</a></li>
-                <li><a href="#">How to apply</a></li>
-                <li><a href="#">Campus, maps & transports</a></li>
-                <li><a href="#">Events for prospective students</a></li>
-                <li><a href="#">Starting university</a></li>
                 <li>
-                  <a href="#">Information for</a>
-                  <ul>
-                    <li><a href="#">International students</a></li>
-                    <li><a href="#">Internation agents</a></li>
-                    <li><a href="#">High school students</a></li>
-                    <li><a href="#">Mature students</a></li>
-                    <li><a href="#">Postgraduate research (HDR) students</a></li>
-                    <li><a href="#">Aboriginal and Torres Strat Islander students</a></li>
-                    <li><a href="#">Study abroad and exchange students</a></li>
-                    <li><a href="#">Teachers and guidance counsellors</a></li>
-                    <li><a href="#">Parents and guardians</a></li>
-                    <li><a href="#">Current students (login)</a></li>
-                  </ul>
+                  <a href="/study/agriculture-environment">Agriculture and Environment</a>
+                </li>
+                <li>
+                  <a href="/study/architecture-planning">Architecture and Planning</a>
+                </li>
+                <li>
+                  <a href="/study/arts-humanities-social-sciences">Arts, Humanities and Social Sciences</a>
+                </li>
+                <li>
+                  <a href="/study/business-economics">Business and Economics</a>
+                </li>
+                <li>
+                  <a href="/study/education">Education</a>
+                </li>
+                <li>
+                  <a href="/study/engineering-computing">Engineering and Computing</a>
+                </li>
+                <li>
+                  <a href="/study/health-behavioural-sciences">Health and Behavioural Sciences</a>
+                </li>
+                <li>
+                  <a href="/study/law">Law</a>
+                </li>
+                <li>
+                  <a href="/study/medicine">Medicine</a>
+                </li>
+                <li>
+                  <a href="/study/science-mathematics">Science and Mathematics</a>
+                </li>
+                <li>
+                  <a href="/study/micromasters-uqx">MicroMasters and UQx</a>
                 </li>
               </ul>
+            </li>
+            <li>
+              <a href="/admissions" aria-haspopup="true" aria-expanded="false">Admissions</a>
+              <ul>
+                <li>
+                  <a href="/admissions/undergraduate">Undergraduate</a>
+                </li>
+                <li>
+                  <a href="/admissions/honours">Honours</a>
+                </li>
+                <li>
+                  <a href="/admissions/postgraduate-coursework">Postgraduate coursework</a>
+                </li>
+                <li>
+                  <a href="/admissions/higher-degree-research">Higher degree by research</a>
+                </li>
+                <li>
+                  <a href="/admissions/cross-institutional-study">Cross-institutional study</a>
+                </li>
+                <li>
+                  <a href="/admissions/non-award-study">Non-award study</a>
+                </li>
+                <li>
+                  <a href="/admissions/doctor-medicine">Doctor of Medicine</a>
+                </li>
+                <li>
+                  <a href="https://www.uq.edu.au/studyabroad/how-to-apply">Study abroad and incoming exchange</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="/university-life" aria-haspopup="true" aria-expanded="false">University life</a>
+              <ul>
+                <li>
+                  <a href="/university-life/living-in-brisbane">Living in Brisbane</a>
+                </li>
+                <li>
+                  <a href="/university-life/getting-prepared-to-come-to-australia">Getting prepared to come to Australia</a>
+                </li>
+                <li>
+                  <a href="/university-life/campuses-research-sites">Campuses and research sites</a>
+                </li>
+                <li>
+                  <a href="/university-life/campus-tours">Campus tours</a>
+                </li>
+              </ul>
+            </li>
+            <li>
+              <a href="/events">Events</a>
+            </li>
+            <li>
+              <a href="/stories">Stories</a>
+            </li>
+            <li>
+              <a href="/contact-us">Contact</a>
+            </li>
+            <li  class="new-header__newglobal-nav-item">
+              <a  class="new-header__newglobal-nav-link" href="#">Study</a>
             </li>
             <li  class="new-header__newglobal-nav-item">
               <a  class="new-header__newglobal-nav-link" href="#">Research</a>
-              <ul>
-                <li>
-                  <a href="#">Research overview</a>
-                </li>
-                <li><a href="#">Research excellence and impact</a></li>
-                <li><a href="#">Faculties, schools, intitutues & centres</a></li>
-                <li><a href="#">Research facilities</a></li>
-                <li><a href="#">Find a researcher or supervisor</a></li>
-                <li><a href="#">Research degrees and graduate students</a></li>
-                <li><a href="#">Industry research collaboration</a></li>
-                <li><a href="#">Be a research participant or volunteer</a></li>
-                <li>
-                  <a href="#">Information for</a>
-                  <ul>
-                    <li><a href="#">Future research students</a></li>
-                    <li><a href="#">New research students</a></li>
-                    <li><a href="#">Current research students</a></li>
-                    <li><a href="#">Prospective research partners</a></li>
-                    <li><a href="#">Commuinity facilities and services</a></li>
-                    <li><a href="#">Policies and procedures</a></li>
-                    <li><a href="#">Key initiatives</a></li>
-                  </ul>
-                </li>
-              </ul>
             </li>
             <li  class="new-header__newglobal-nav-item">
               <a  class="new-header__newglobal-nav-link" href="#">Partners and community</a>
-              <ul>
-                <li>
-                  <a href="#">Partners and community overview</a>
-                </li>
-                <li><a href="#">Research & corporate partnerships</a></li>
-                <li><a href="#">UQ Alumni community</a></li>
-                <li><a href="#">Working with High Schools</a></li>
-                <li><a href="#">Offer work placements and internship programs</a></li>
-                <li><a href="#">High school engagement</a></li>
-                <li><a href="#">Giving and philanthropy</a></li>
-                <li><a href="#">Sponsorship</a></li>
-                <li><a href="#">Commnity engagement & volunteering</a></li>
-                <li><a href="#">Indigenous engagement</a></li>
-                <li>
-                  <a href="#">Information for</a>
-                  <ul>
-                    <li><a href="#">Alumni</a></li>
-                    <li><a href="#">Donors</a></li>
-                    <li><a href="#">Business and industry</a></li>
-                    <li><a href="#">Government</a></li>
-                    <li><a href="#">Media</a></li>
-                  </ul>
-                </li>
-              </ul>
             </li>
             <li class="new-header__newglobal-nav-item">
               <a class="new-header__newglobal-nav-link" href="#">About</a>
-              <ul>
-                <li>
-                  <a href="#">About overview</a>
-                </li>
-                <li><a href="#">Introducing UQ</a></li>
-                <li><a href="#">Vision, values and strategy</a></li>
-                <li><a href="#">Organisational structure and governance</a></li>
-                <li><a href="#">Teaching and learning</a></li>
-                <li><a href="#">Faculties, schools, institutes and centres</a></li>
-                <li><a href="#">Colleges and accommodation</a></li>
-                <li><a href="#">Community faciliites and services</a></li>
-                <li><a href="#">Policies and Procedures</a></li>
-                <li><a href="#">Key initiatives</a></li>
-              </ul>
             </li>
             <li  class="new-header__black-nav-item">
               <a class="new-header__black-nav-link" href="#">UQ home</a>
