removed site utilities

--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -324,7 +324,7 @@
           <a href="/" class="uq-site-header__title">Site title</a>
         </div>
         <div class="uq-site-header__title-container__right">
-          <div>[Site utilities go here]</div>
+          <!-- <div>[Site utilities go here]</div> -->
           <button class="uq-site-header__navigation-toggle jsNavToggle">Menu</button>
         </div>
       </div>
