--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -176,10 +176,10 @@
                             <li><a href="#">Study options & course types</a></li>
                             <li><a href="#">Scholarships</a></li>
                             <li><a href="#">Life at UQ & accommodation</a></li>
-                            <li><a href="#">How to apply</a></li>
-                            <li><a href="#">Campus, maps & transports</a></li>
-                            <li><a href="#">Events for prospective students</a></li>
                             <li><a href="#">Starting university</a></li>
+                            <li><a href="#">How to apply</a></li>
+                            <li><a href="#">Campuses, maps & transport</a></li>
+                            <li><a href="#">Events for prospective students</a></li>
                           </ul>
                         </nav>
                       </div>
@@ -188,15 +188,15 @@
                         <nav class="megamenu__menu">
                           <ul>
                             <li><a href="#">International students</a></li>
-                            <li><a href="#">Internation agents</a></li>
+                            <li><a href="#">International agents</a></li>
                             <li><a href="#">High school students</a></li>
-                            <li><a href="#">Mature students</a></li>
+                            <li><a href="#">Non-school leavers</a></li>
                             <li><a href="#">Postgraduate research (HDR) students</a></li>
-                            <li><a href="#">Aboriginal and Torres Strat Islander students</a></li>
-                            <li><a href="#">Study abroad and exchange students</a></li>
+                            <li><a href="#">Aboriginal and Torres Strait Islander students</a></li>
+                            <li><a href="#">Study Abroad and Exchange students</a></li>
                             <li><a href="#">Teachers and guidance counsellors</a></li>
-                            <li><a href="#">Parents and guardians</a></li>
-                            <li><a href="#">Current students (login)</a></li>
+                            <li><a href="#">Parents and Guardians</a></li>
+                            <li><a href="#">Current students</a></li>
                           </ul>
                         </nav>
                       </div>
@@ -213,13 +213,16 @@
                       <div class="megamenu__column">
                         <nav class="megamenu__menu">
                           <ul>
-                            <li><a href="#">Research excellence and impact</a></li>
-                            <li><a href="#">Faculties, schools, intitutues & centres</a></li>
+                            <li><a href="#">Explore UQ Research</a></li>
+                            <li><a href="#">Research Excellence and Impact</a></li>
+                            <li><a href="#">Faculties, Schools, Intitutues & Centres</a></li>
                             <li><a href="#">Research facilities</a></li>
                             <li><a href="#">Find a researcher or supervisor</a></li>
                             <li><a href="#">Research degrees and graduate students</a></li>
+                            <li><a href="#">Research support, integrity and ethics</a></li>
                             <li><a href="#">Industry research collaboration</a></li>
-                            <li><a href="#">Be a research participant or volunteer</a></li>
+                            <li><a href="#">Research communities and networks</a></li>
+                            <li><a href="#">Participate in a research project</a></li>
                           </ul>
                         </nav>
                       </div>
@@ -231,9 +234,7 @@
                             <li><a href="#">New research students</a></li>
                             <li><a href="#">Current research students</a></li>
                             <li><a href="#">Prospective research partners</a></li>
-                            <li><a href="#">Commuinity facilities and services</a></li>
-                            <li><a href="#">Policies and procedures</a></li>
-                            <li><a href="#">Key initiatives</a></li>
+                            <li><a href="#">Research participants</a></li>
                           </ul>
                         </nav>
                       </div>
@@ -249,21 +250,17 @@
                       <div class="megamenu__column">
                         <nav class="megamenu__menu">
                           <ul>
-                            <li><a href="#">Research & corporate partnerships</a></li>
-                            <li><a href="#">UQ Alumni community</a></li>
-                            <li><a href="#">Working with High Schools</a></li>
-                            <li><a href="#">Offer work placements and internship programs</a></li>
+                            <li><a href="#">Partners, Initiatives and Impact</a></li>
+                            <li><a href="#">Research & Corporate Partnerships</a></li>
+                            <li><a href="#">Alumni Community</a></li>
+                            <li><a href="#">Work placements and Internships</a></li>
+                            <li><a href="#">Teaching and Exchange Collaborations</a></li>
                             <li><a href="#">High school engagement</a></li>
                             <li><a href="#">Giving and philanthropy</a></li>
-                          </ul>
-                        </nav>
-                      </div>
-                      <div class="megamenu__column">
-                        <nav class="megamenu__menu">
-                          <ul>
                             <li><a href="#">Sponsorship</a></li>
-                            <li><a href="#">Commnity engagement & volunteering</a></li>
-                            <li><a href="#">Indigenous engagement</a></li>
+                            <li><a href="#">Commnity Engagement & Volunteering</a></li>
+                            <li><a href="#">Indigenous Engagement</a></li>
+                            <li><a href="#">Community Facilities and Services</a></li>
                           </ul>
                         </nav>
                       </div>
@@ -274,7 +271,6 @@
                             <li><a href="#">Alumni</a></li>
                             <li><a href="#">Donors</a></li>
                             <li><a href="#">Business and industry</a></li>
-                            <li><a href="#">Government</a></li>
                             <li><a href="#">Media</a></li>
                           </ul>
                         </nav>
@@ -292,20 +288,16 @@
                         <nav class="megamenu__menu">
                           <ul>
                             <li><a href="#">Introducing UQ</a></li>
-                            <li><a href="#">Vision, values and strategy</a></li>
-                            <li><a href="#">Organisational structure and governance</a></li>
-                            <li><a href="#">Teaching and learning</a></li>
-                            <li><a href="#">Faculties, schools, institutes and centres</a></li>
-                            <li><a href="#">Colleges and accommodation</a></li>
-                            <li><a href="#">Community faciliites and services</a></li>
-                          </ul>
-                        </nav>
-                      </div>
-                      <div class="megamenu__column">
-                        <nav class="megamenu__menu">
-                          <ul>
+                            <li><a href="#">Vision, Values and Strategy</a></li>
+                            <li><a href="#">Organisational Structure and Governance</a></li>
+                            <li><a href="#">Teaching and Learning</a></li>
+                            <li><a href="#">Campuses, maps and transport</a></li>
+                            <li><a href="#">Faculties, Schools, Institutes and Centres</a></li>
+                            <li><a href="#">Colleges and Accommodation</a></li>
+                            <li><a href="#">Community Faciliites and Services</a></li>
                             <li><a href="#">Policies and Procedures</a></li>
                             <li><a href="#">Key initiatives</a></li>
+                            <li><a href="#">Careers at UQ</a></li>
                           </ul>
                         </nav>
                       </div>
