removed uneccessary code in interim example. more padding and icon spacing tweaks

--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -164,8 +164,8 @@
         <div class="new-header__main-nav-wrapper">
           <nav class="new-header__main-nav">
             <ul class="new-header__main-nav-list">
-              <li><a class="new-header__main-nav-link main-nav-link--study" href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a></li>
-              <li><a class="new-header__main-nav-link main-nav-link--research" href="https://research.uq.edu.au/" class="gtm-processed">Research</a></li>
+              <li><a class="new-header__main-nav-link" href="https://future-students.uq.edu.au/" class="gtm-processed">Study</a></li>
+              <li><a class="new-header__main-nav-link" href="https://research.uq.edu.au/" class="gtm-processed">Research</a></li>
               <li><a class="new-header__main-nav-link" href="https://global-engagement.uq.edu.au/partnerships" class="gtm-processed">Partners and Community</a></li>
               <li><a class="new-header__main-nav-link" href="https://about.uq.edu.au/" class="gtm-processed">About</a></li>
             </ul>
