Spacing and styling updates

--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -51,7 +51,7 @@
                 <li><a href="#">Events for prospective students</a></li>
                 
                 <li>
-                  <a href="#">Information for</a>
+                  <a class="new-header__newglobal-nav-parent" href="#">Information for</a>
                   <ul>
                     <li><a href="#">International students</a></li>
                     <li><a href="#">International agents</a></li>
