testing alternatives to fix menu height bug

--- a/packages/private-design-output/src/interim.html
+++ b/packages/private-design-output/src/interim.html
@@ -27,140 +27,7 @@
             <div class="search-toggle__label">Search</div>
           </button>
         </div>
-        <nav class="slide-menu global-mobile-nav" id="global-mobile-nav">
-          <!-- <div class="controls">
-            <button type="button" class="btn slide-menu__control" data-action="close">Close</button>
-          </div> -->
-          <div class="uq-site-header__title-container">
-            <div class="uq-site-header__title-container__left">
-              <a href="/" class="uq-site-header__title">Site title</a>
-            </div>
-          </div>
-          <ul>
-            <li  class="">
-              <a  class="" href="#">Study</a>
-              <ul>
-                <li>
-                  <a href="/study/programs">Find a program</a>
-                </li>
-                <li>
-                  <a href="/study/agriculture-environment">Agriculture and Environment</a>
-                </li>
-                <li>
-                  <a href="/study/architecture-planning">Architecture and Planning</a>
-                </li>
-                <li>
-                  <a href="/study/arts-humanities-social-sciences">Arts, Humanities and Social Sciences</a>
-                </li>
-                <li>
-                  <a href="/study/business-economics">Business and Economics</a>
-                </li>
-                <li>
-                  <a href="/study/education">Education</a>
-                </li>
-                <li>
-                  <a href="/study/engineering-computing">Engineering and Computing</a>
-                </li>
-                <li>
-                  <a href="/study/health-behavioural-sciences">Health and Behavioural Sciences</a>
-                </li>
-                <li>
-                  <a href="/study/law">Law</a>
-                </li>
-                <li>
-                  <a href="/study/medicine">Medicine</a>
-                </li>
-                <li>
-                  <a href="/study/science-mathematics">Science and Mathematics</a>
-                </li>
-                <li>
-                  <a href="/study/micromasters-uqx">MicroMasters and UQx</a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="/admissions" aria-haspopup="true" aria-expanded="false">Admissions</a>
-              <ul>
-                <li>
-                  <a href="/admissions/undergraduate">Undergraduate</a>
-                </li>
-                <li>
-                  <a href="/admissions/honours">Honours</a>
-                </li>
-                <li>
-                  <a href="/admissions/postgraduate-coursework">Postgraduate coursework</a>
-                </li>
-                <li>
-                  <a href="/admissions/higher-degree-research">Higher degree by research</a>
-                </li>
-                <li>
-                  <a href="/admissions/cross-institutional-study">Cross-institutional study</a>
-                </li>
-                <li>
-                  <a href="/admissions/non-award-study">Non-award study</a>
-                </li>
-                <li>
-                  <a href="/admissions/doctor-medicine">Doctor of Medicine</a>
-                </li>
-                <li>
-                  <a href="https://www.uq.edu.au/studyabroad/how-to-apply">Study abroad and incoming exchange</a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="/university-life" aria-haspopup="true" aria-expanded="false">University life</a>
-              <ul>
-                <li>
-                  <a href="/university-life/living-in-brisbane">Living in Brisbane</a>
-                </li>
-                <li>
-                  <a href="/university-life/getting-prepared-to-come-to-australia">Getting prepared to come to Australia</a>
-                </li>
-                <li>
-                  <a href="/university-life/campuses-research-sites">Campuses and research sites</a>
-                </li>
-                <li>
-                  <a href="/university-life/campus-tours">Campus tours</a>
-                </li>
-              </ul>
-            </li>
-            <li>
-              <a href="/events">Events</a>
-            </li>
-            <li>
-              <a href="/stories">Stories</a>
-            </li>
-            <li>
-              <a href="/contact-us">Contact</a>
-            </li>
-            <li  class="new-header__newglobal-nav-item">
-              <a  class="new-header__newglobal-nav-link" href="#">Study</a>
-            </li>
-            <li  class="new-header__newglobal-nav-item">
-              <a  class="new-header__newglobal-nav-link" href="#">Research</a>
-            </li>
-            <li  class="new-header__newglobal-nav-item">
-              <a  class="new-header__newglobal-nav-link" href="#">Partners and community</a>
-            </li>
-            <li class="new-header__newglobal-nav-item">
-              <a class="new-header__newglobal-nav-link" href="#">About</a>
-            </li>
-            <li  class="new-header__black-nav-item">
-              <a class="new-header__black-nav-link" href="#">UQ home</a>
-            </li>
-            <li  class="new-header__black-nav-item">
-              <a class="new-header__black-nav-link" href="#">News</a>
-            </li>
-            <li  class="new-header__black-nav-item">
-              <a class="new-header__black-nav-link" href="#">Events</a>
-            </li>
-            <li  class="new-header__black-nav-item">
-              <a class="new-header__black-nav-link" href="#">Give</a>
-            </li>
-            <li  class="new-header__black-nav-item">
-              <a class="new-header__black-nav-link" href="#">Contact</a>
-            </li>  
-        </nav>
+        
         <div class="new-header__main-nav-wrapper">
           <nav class="new-header__main-nav">
             <ul class="new-header__main-nav-list">
@@ -171,8 +38,141 @@
             </ul>
           </nav>
         </div>
-        
       </div>
+      <nav class="slide-menu global-mobile-nav" id="global-mobile-nav">
+        <!-- <div class="controls">
+          <button type="button" class="btn slide-menu__control" data-action="close">Close</button>
+        </div> -->
+        <div class="uq-site-header__title-container">
+          <div class="uq-site-header__title-container__left">
+            <a href="/" class="uq-site-header__title">Site title</a>
+          </div>
+        </div>
+        <ul>
+          <li  class="">
+            <a  class="" href="#">Study</a>
+            <ul>
+              <li>
+                <a href="/study/programs">Find a program</a>
+              </li>
+              <li>
+                <a href="/study/agriculture-environment">Agriculture and Environment</a>
+              </li>
+              <li>
+                <a href="/study/architecture-planning">Architecture and Planning</a>
+              </li>
+              <li>
+                <a href="/study/arts-humanities-social-sciences">Arts, Humanities and Social Sciences</a>
+              </li>
+              <li>
+                <a href="/study/business-economics">Business and Economics</a>
+              </li>
+              <li>
+                <a href="/study/education">Education</a>
+              </li>
+              <li>
+                <a href="/study/engineering-computing">Engineering and Computing</a>
+              </li>
+              <li>
+                <a href="/study/health-behavioural-sciences">Health and Behavioural Sciences</a>
+              </li>
+              <li>
+                <a href="/study/law">Law</a>
+              </li>
+              <li>
+                <a href="/study/medicine">Medicine</a>
+              </li>
+              <li>
+                <a href="/study/science-mathematics">Science and Mathematics</a>
+              </li>
+              <li>
+                <a href="/study/micromasters-uqx">MicroMasters and UQx</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="/admissions" aria-haspopup="true" aria-expanded="false">Admissions</a>
+            <ul>
+              <li>
+                <a href="/admissions/undergraduate">Undergraduate</a>
+              </li>
+              <li>
+                <a href="/admissions/honours">Honours</a>
+              </li>
+              <li>
+                <a href="/admissions/postgraduate-coursework">Postgraduate coursework</a>
+              </li>
+              <li>
+                <a href="/admissions/higher-degree-research">Higher degree by research</a>
+              </li>
+              <li>
+                <a href="/admissions/cross-institutional-study">Cross-institutional study</a>
+              </li>
+              <li>
+                <a href="/admissions/non-award-study">Non-award study</a>
+              </li>
+              <li>
+                <a href="/admissions/doctor-medicine">Doctor of Medicine</a>
+              </li>
+              <li>
+                <a href="https://www.uq.edu.au/studyabroad/how-to-apply">Study abroad and incoming exchange</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="/university-life" aria-haspopup="true" aria-expanded="false">University life</a>
+            <ul>
+              <li>
+                <a href="/university-life/living-in-brisbane">Living in Brisbane</a>
+              </li>
+              <li>
+                <a href="/university-life/getting-prepared-to-come-to-australia">Getting prepared to come to Australia</a>
+              </li>
+              <li>
+                <a href="/university-life/campuses-research-sites">Campuses and research sites</a>
+              </li>
+              <li>
+                <a href="/university-life/campus-tours">Campus tours</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="/events">Events</a>
+          </li>
+          <li>
+            <a href="/stories">Stories</a>
+          </li>
+          <li>
+            <a href="/contact-us">Contact</a>
+          </li>
+          <li  class="new-header__newglobal-nav-item">
+            <a  class="new-header__newglobal-nav-link" href="#">Study</a>
+          </li>
+          <li  class="new-header__newglobal-nav-item">
+            <a  class="new-header__newglobal-nav-link" href="#">Research</a>
+          </li>
+          <li  class="new-header__newglobal-nav-item">
+            <a  class="new-header__newglobal-nav-link" href="#">Partners and community</a>
+          </li>
+          <li class="new-header__newglobal-nav-item">
+            <a class="new-header__newglobal-nav-link" href="#">About</a>
+          </li>
+          <li  class="new-header__black-nav-item">
+            <a class="new-header__black-nav-link" href="#">UQ home</a>
+          </li>
+          <li  class="new-header__black-nav-item">
+            <a class="new-header__black-nav-link" href="#">News</a>
+          </li>
+          <li  class="new-header__black-nav-item">
+            <a class="new-header__black-nav-link" href="#">Events</a>
+          </li>
+          <li  class="new-header__black-nav-item">
+            <a class="new-header__black-nav-link" href="#">Give</a>
+          </li>
+          <li  class="new-header__black-nav-item">
+            <a class="new-header__black-nav-link" href="#">Contact</a>
+          </li>  
+      </nav>
       <div class="new-header__search-wrapper">
         <div class="new-header__search">
           <form>
@@ -686,6 +686,14 @@
       new uq.siteHeaderNavigation(navelement, "uq-site-header__navigation");
       // Initialise accordions
       new uq.accordion();
+
+      const appHeight = () => {
+        const doc = document.documentElement
+        doc.style.setProperty('--app-height', `${window.innerHeight}px`)
+        console.log(window.innerHeight);
+      }
+      window.addEventListener('resize', appHeight)
+      appHeight()
     </script>
     <script>
       document.addEventListener('DOMContentLoaded', function() {
