--- a/packages/private-design-output/src/homepage.html
+++ b/packages/private-design-output/src/homepage.html
@@ -203,7 +203,7 @@
               <li><a href="#">Events for prospective students</a></li>
               
               <li>
-                <a href="#top">Information for</a>
+                <a href="#" class="global-mobile-nav__audience-link">Information for</a>
                 <ul>
                   <li><a href="#">International students</a></li>
                   <li><a href="#">International agents</a></li>
@@ -236,7 +236,7 @@
               <li><a href="#">Research communities and networks</a></li>
               <li><a href="#">Participate in a research project</a></li>
               <li>
-                <a href="#">Information for</a>
+                <a href="#  class="global-mobile-nav__audience-link">Information for</a>
                 <ul>
                   <li><a href="#">Future research students</a></li>
                   <li><a href="#">New research students</a></li>
@@ -248,7 +248,7 @@
             </ul>
           </li>
           <li  class="new-header__newglobal-nav-item">
-            <a  class="new-header__newglobal-nav-link" href="#">Partners and community</a> 
+            <a class="new-header__newglobal-nav-link" href="#">Partners and community</a> 
             <ul>
               <li>
                 <a href="#">Partners and community overview</a>
@@ -265,7 +265,7 @@
               <li><a href="#">Indigenous Engagement</a></li>
               <li><a href="#">Community Facilities and Services</a></li>
               <li>
-                <a href="#">Information for</a>
+                <a href="#" class="global-mobile-nav__audience-link">Information for</a>
                 <ul>
                   <li><a href="#">Alumni</a></li>
                   <li><a href="#">Donors</a></li>
@@ -691,11 +691,12 @@
         });
 
         //this.slideMenuBackButtons = document.querySelectorAll('.slide-menu__backlink');
-        var slideMenuBackButtons = document.querySelectorAll('.slide-menu__backlink');
+        var slideMenuBackButtons = document.querySelectorAll('.slide-menu__backlink, .global-mobile-nav__audience-link');
+        
         Array.prototype.forEach.call(slideMenuBackButtons, function(el, i){
             el.addEventListener('click', () => {
-              window.focus();
-              window.scrollTo(0,0);
+              document.querySelector('.global-mobile-nav').scrollTop = 0;
+              console.log('slide-menu__backlink clicked');
             });
         });
       });
